[package]
name = "create-your-own-mutex"
version = "0.1.0"
edition = "2021"

[dependencies]
loom = "0.5.6"
tokio = { version = "1.26.0", features = ["sync", "macros", "rt-multi-thread", "parking_lot"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
parking_lot = "0.12.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true